--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @media print {
+  @page {
+    break-inside: auto;
+    break-before: auto;
+    break-after: auto;
+  }
+} */
+
+html {}
 
 body {
   margin: 0;
@@ -9,6 +18,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
