--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ html {}
 
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Fira Code',
     sans-serif;
